# Project-Jarvis

./: .gitignore  CLAUDE.md  PLAN.md  README.md  platformio.ini
data/web/: app.js  index.html  style.css
plans/: adhd-brainstorm.md  phase7-validation.md  phase8-2nd-brain-validation.md
scripts/: build.sh
scripts/notifier/: send.sh
scripts/phase7/: mqtt-send.sh  mqtt-watch.sh
src/: config.h  main.cpp
src/app/: CommandHandler.cpp  CommandHandler.h  ConfigSchema.cpp  ConfigSchema.h  IntentRouter.cpp  IntentRouter.h  MathParser.cpp  MathParser.h  ModeManager.cpp  ModeManager.h  NVSConfig.cpp  NVSConfig.h  SettingsScreen.cpp  SettingsScreen.h  WiFiCreds.cpp  WiFiCreds.h  state_machine.cpp  state_machine.h
src/hal/: AudioPlayer.cpp  AudioPlayer.h  Display.cpp  Display.h  LLMModule.cpp  LLMModule.h  SdLogger.cpp  SdLogger.h
src/net/: AnthropicClient.cpp  AnthropicClient.h  CaptivePortal.cpp  CaptivePortal.h  HAClient.cpp  HAClient.h  LLMClient.cpp  LLMClient.h  MqttClient.cpp  MqttClient.h  OtaService.cpp  OtaService.h  TtsClient.cpp  TtsClient.h  WiFiManager.cpp  WiFiManager.h
src/prompts/: intent_prompt.h
src_v2/: platformio.ini
src_v2/data/web/: style.css
src_v2/src/: main.cpp
tools/: provision-wifi.py
tools/brain-mcp/: .gitignore  deploy.sh  pyproject.toml
tools/brain-mcp/src/brain_mcp/: __init__.py  config.py  frontmatter.py  server.py  vault.py
tools/brain-mcp/src/brain_mcp/tools/: capture.py  ingest.py  lint.py  projects.py  search.py
tools/brain-mcp/systemd/: brain-sync.service  brain-sync.timer
tools/google-mcp/: deploy.sh  pyproject.toml
tools/google-mcp/scripts/: refresh-token.py
tools/google-mcp/src/google_mcp/: __init__.py  auth.py  config.py  gcal.py  gmail.py  oauth_cli.py  server.py
tools/jarvis_hud_demo/: README.md  jarvis_hud_demo.ino
tools/morning-brief/: deploy.sh  pyproject.toml
tools/morning-brief/src/morning_brief/: __init__.py  config.py  main.py  prompt.py
tools/morning-brief/systemd/: morning-brief.service  morning-brief.timer
tools/notifier/: deploy.sh  pyproject.toml
tools/notifier/src/jarvis_notifier/: __init__.py  config.py  mqtt_client.py  pushover.py  queue_store.py  router.py  server.py
tools/notifier/systemd/: jarvis-notifier.service
tools/oc-personal-runner/: deploy.sh  pyproject.toml
tools/oc-personal-runner/src/oc_personal/: __init__.py  agent.py  config.py  proxy.py  server.py
tools/oc-personal-runner/systemd/: oc-personal.service
