[project]
name = "brain-mcp"
version = "0.1.0"
description = "MCP server exposing the 2nd Brain wiki to OpenClaw (Project Jarvis Phase 8)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
brain-mcp = "brain_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_mcp"]
