[project]
name = "google-mcp"
version = "0.1.0"
description = "MCP server exposing personal Gmail + Google Calendar to OpenClaw (Project Jarvis Sprint 1)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth>=2.30.0",
]

[project.scripts]
google-mcp = "google_mcp.server:main"
google-mcp-auth = "google_mcp.oauth_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_mcp"]
