[project]
name = "morning-brief"
version = "0.1.0"
description = "Scheduled one-shot that asks oc-personal for ONE focus today and posts it to jarvis-notifier as a proactive TTS push."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
morning-brief = "morning_brief.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morning_brief"]
