[project]
name = "jarvis-notifier"
version = "0.1.0"
description = "Proactive notification router for Jarvis: HTTP POST in, MQTT-to-device + Pushover-to-phone out, with priority tiers and a medium-tier queue drained on device idle."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.0",
]

[project.scripts]
jarvis-notifier = "jarvis_notifier.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_notifier"]
