[project]
name = "oc-personal-runner"
version = "0.1.0"
description = "OpenAI-compat chat-completions front for Jarvis's oc-personal model: agent loop with brain-mcp + LM Studio passthrough."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.scripts]
oc-personal = "oc_personal.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oc_personal"]
